2008-06-13 [holger]	3.4.0cvs94

	* .cvsignore
		More files to ignore
	* src/gtk/inputdialog.c
	* src/gtk/inputdialog.h
		Make input dialog more generic so that a checkbox
		with custom text can be used in addition to the
		"remember this" checkbox
	* src/imap_gtk.c
	* src/mh_gtk.c
	* src/prefs_common.c
	* src/prefs_common.h
		Allow new folders to inherit the properties of the
		parent folder during folder creation

2008-06-13 [wwp]	3.4.0cvs93

	* src/addressbook.c
		a better fix for this string, won't break up translations,
		and is conform to other similar ones.

2008-06-13 [wwp]	3.4.0cvs92

	* src/addrduplicates.c
	* src/addressadd.c
	* src/addressbook.c
	* src/addressbook_foldersel.c
	* src/editgroup.c
		use tree decorations everywhere AB folders are used (AB tree pane,
		    add address to AB, select AB folder, edit group, custom attr, find dup
		    results), in order to match global style
		make double-clicks in AB's tree pane behave like in MW's folder tree pane:
		    double clicking on groups in tree pane does open the group edit dialog
		    double clicking on other items in tree pane does expand/collapse
		fix a missing space in AB's delete-folder dialog
		fix again edit button sensitivity (thanks to iwkse, this reworks cvs79)

	* src/foldersel.c
		make foldersel dialog show dotted lines according to global (hidden) prefs

2008-06-12 [colin]	3.4.0cvs91

	* src/compose.c
	* src/compose.h
		Fix bug 1635, 'Last character of message is truncated 
		when changing accounts w/ sigs'
	* src/folderview.c
		Fix bug 1636, 'Can't select "properties" on "folders 
		only" folders'

2008-06-11 [colin]	3.4.0cvs90

	* src/folder.c
		Maybe fix bug 1623, 'exits with segfault when 
		logging in to certain imap-servers'

2008-06-10 [mones]	3.4.0cvs89

	* AUTHORS
	* tools/Makefile.am
	* tools/README
	* tools/convert_mbox.sh
		Undo cvs86 and cvs87, it really should be a patch to 
		convert_mbox.pl

2008-06-10 [wwp]	3.4.0cvs88

	* po/fr.po
		Updated French translation.
