@@ -3390,3 +3390,4 @@
 ( cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/addrduplicates.c;  cvs diff -u -r 1.9.2.22 -r 1.9.2.23 src/addressadd.c;  cvs diff -u -r 1.60.2.117 -r 1.60.2.118 src/addressbook.c;  cvs diff -u -r 1.1.2.10 -r 1.1.2.11 src/addressbook_foldersel.c;  cvs diff -u -r 1.11.2.18 -r 1.11.2.19 src/editgroup.c;  cvs diff -u -r 1.26.2.35 -r 1.26.2.36 src/foldersel.c;  ) > 3.4.0cvs92.patchset
 ( cvs diff -u -r 1.60.2.118 -r 1.60.2.119 src/addressbook.c;  ) > 3.4.0cvs93.patchset
 ( cvs diff -u -r 1.8.2.6 -r 1.8.2.7 .cvsignore;  cvs diff -u -r 1.1.2.56 -r 1.1.2.57 src/imap_gtk.c;  cvs diff -u -r 1.2.2.30 -r 1.2.2.31 src/mh_gtk.c;  cvs diff -u -r 1.204.2.171 -r 1.204.2.172 src/prefs_common.c;  cvs diff -u -r 1.103.2.109 -r 1.103.2.110 src/prefs_common.h;  cvs diff -u -r 1.2.2.27 -r 1.2.2.28 src/gtk/inputdialog.c;  cvs diff -u -r 1.1.2.8 -r 1.1.2.9 src/gtk/inputdialog.h;  ) > 3.4.0cvs94.patchset
+( cvs diff -u -r 1.155.2.87 -r 1.155.2.88 src/Makefile.am;  diff -u /dev/null src/autofaces.c;  diff -u /dev/null src/autofaces.h;  cvs diff -u -r 1.382.2.452 -r 1.382.2.453 src/compose.c;  ) > 3.4.0cvs95.patchset
