@@ -124,6 +124,7 @@
 #include "hooks.h"
 #include "privacy.h"
 #include "timing.h"
+#include "autofaces.h"
 
 enum
 {
@@ -6023,6 +6024,20 @@ static gchar *compose_get_header(Compose *compose)
 				g_string_append_printf(header, "%s: %s\n", chdr->name, buf);
 			}
 		}
+	}
+
+	/* Automatic Faces and X-Faces */
+	if (get_account_xface (buf, sizeof(buf), compose->account->account_name) == 0) {
+		g_string_append_printf(header, "X-Face: %s\n", buf);
+	}
+	else if (get_default_xface (buf, sizeof(buf)) == 0) {
+		g_string_append_printf(header, "X-Face: %s\n", buf);
+	}
+	if (get_account_face (buf, sizeof(buf), compose->account->account_name) == 0) {
+		g_string_append_printf(header, "Face: %s\n", buf);
+	}
+	else if (get_default_face (buf, sizeof(buf)) == 0) {
+		g_string_append_printf(header, "Face: %s\n", buf);
 	}
 
 	/* PRIORITY */
